name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  ghcjs-options:
    -dedupe
  hs-source-dirs:      .
  build-depends:       base, miso, array, deepseq, ghcjs-base
  build-tools:         happy, alex
  other-modules:       Evaluator, Grammar, Tokens, Tsl, TileView, Examples
  default-language:    Haskell2010
